--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
-                    <h1 class="section-title position-relative text-center mb-5">Traditionales & Deliciosos desde 1950</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Tradicionales & Deliciosos desde 1950</h1>
                 </div>
             </div>
             <div class="row">
