--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Traditionales & Deliciosos</h4>
-                            <h1 class="display-3 text-white mb-md-4">Elaborado con Nuestra Propia Leche Orgánica.</h1>
+                            <h4 class="text-white text-uppercase mb-md-3">Tradicionales & Deliciosos</h4>
+                            <h1 class="display-3 text-white mb-md-4">Elaborado con el Corazón.</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Saber Más...</a>
                         </div>
                     </div>
