--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3 mt-lg-5">Catalogo de Productos</h1>
+            <h1 class="text-white display-3 mt-lg-5">Catálogo de Productos</h1>
             <div class="d-inline-flex align-items-center text-white">
                 <p class="m-0"><a class="text-white" href="">Inicio</a></p>
                 <i class="fa fa-circle px-3"></i>
